WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306373
[iOS] Active pointer map may fail to clear in presence of external gesture recognizer
https://bugs.webkit.org/show_bug.cgi?id=306373
Summary
[iOS] Active pointer map may fail to clear in presence of external gesture re...
Lily Spiniolas
Reported
2026-01-27 14:16:09 PST
rdar://159227684
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-01-27 14:25:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57358
EWS
Comment 2
2026-01-28 10:49:17 PST
Committed
306362@main
(7b60c3fdb55b): <
https://commits.webkit.org/306362@main
> Reviewed commits have been landed. Closing PR #57358 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug